Wed Feb  9 11:18:48 GMT 2000 Chris emerson <chris.emerson@open.muscat.com>

	* Fixed the header guards (now all caps, should be unique, and don't
	  start with underscores).

Tue Feb  8 20:04:34 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed prefix OM to Om in all class names.

Tue Feb  8 19:17:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Changed OMMSet::max_weight to OMMSet::max_possible.
          Added OMMSet::max_attained, which is weight of top match, (not
          neccessarily top item in MSet)

        * Allow user to specify decision function for expand.

        * Also allow user to specify that query terms should not be returned
          by expand, by calling OMExpandOptions::use_query_terms().                       This does not yet work, however.

        * Add many code comments, and make doc++ stuff work better.

Tue Feb  8 19:13:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some more tests.

Tue Feb  8 16:51:22 GMT 2000 Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed boolean only querying.

	  o) Made isbool get set correctly (was being unset by
	    initialise_from_copy)

	  o) Set max_weight correctly.

Tue Feb  8 16:28:48 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added the stemmer test script, stemtest.pl

Mon Feb  7 19:17:25 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Prefix all the types in omtypes.h with "om_".

Mon Feb  7 17:37:52 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test of boolean-only queries to apitest, which fails.

Mon Feb  7 15:56:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Improved exception hierarchy:

	  o Exceptions are all split between `OmLogicError' and
	    `OmRuntimeError'.
	    
	  o Plain `OmError' exceptions are no longer allowed.

	  o All exception classes are prefixed with `Om'.
